--- a/code/app/css/trigger/adm/style.css
+++ b/code/app/css/trigger/adm/style.css
@@ -799,6 +799,25 @@ a.table_icon {
     background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#f5f5f5));
 }
 
+a.table_icon_delete {
+    float:left;
+    margin-right:5px;
+    padding:5px 5px 0px 5px;
+
+    border:1px solid #fff;
+
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;	
+
+    -moz-box-shadow: 1px 1px 0px #999;
+    -webkit-box-shadow: 1px 1px 0px #999;
+    box-shadow: 1px 1px 0px #999;
+
+    background: -moz-linear-gradient(top,#fbfbfb,#f5f5f5);
+    background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#f5f5f5));
+}
+
 a.button_link, input[type="submit"], input[type="reset"], .ui-dialog .ui-dialog-buttonpane button {
     color:#fff;
     text-decoration:none;
