--- a/web/app/webroot/css/basicos.css
+++ b/web/app/webroot/css/basicos.css
@@ -4,18 +4,74 @@ html,body{
 }
 body{
     background: url(./images/bg.jpg);
+    font-family: Verdana, sans-serif;
 }
-
+.hidden{
+    display: none;
+}
 .bg-mascara{
     background: url(./images/bg-mascara.png);
-    width: 100%;
-    height: 100%;
     background-size: cover;
-    position: absolute;
-    z-index: 1;
+    min-width: 950px;
+}
+.header{
+    margin-top: 50px
+}
+.logo{
+    background: url(./images/logo.png);
+    background-size: 100%;
+    height: 155px;
+    cursor: pointer;
 }
 
 
-.form-login{
-    margin-top: 80px;
+
+
+.footer{
+    background: url(./images/footer.png);
+    background-size: cover;
+    height: 400px;
+}
+
+a.media-social{
+    cursor: pointer;
+}
+
+.media-social{
+    background: url(./images/bnt-media-social.png) no-repeat no-repeat;
+    height: 33px;
+    background-size: 116px 33px;
+}
+.media-youtube{
+    background-position: 0px 0px; 
+}
+.media-facebook{
+    background-position: -39.5px 0px; 
+}
+.media-twitter{
+    background-position: -80px 0px; 
+}
+
+.menu{
+    margin-top: 50px;
+}
+
+.menu li{
+    list-style-type:none;
+}
+
+.menu li a{
+    font-size: 16px;
+    color: black;
+}
+
+
+.seta-li{
+    background: url(./images/seta-li.png) no-repeat no-repeat;
+    background-size: 20px 20px;
+    display: block;
+    height: 20px;
+}
+.seta-li-top{
+    margin-top: 3px;
 }
