--- a/wp/wp-content/themes/Anime-Trigger/style.css
+++ b/wp/wp-content/themes/Anime-Trigger/style.css
@@ -71,4 +71,9 @@ table {
 ! END RESET CSS
 **************/
 
-
+.bg-rosa{
+    background: url('img/bg.jpg');
+}
+.bg-dark{
+    background: url('img/bg-dark.jpg');
+}
