--- a/wp/wp-content/themes/Anime-Trigger/style.css
+++ b/wp/wp-content/themes/Anime-Trigger/style.css
@@ -90,18 +90,6 @@ a{
 ***************************/
 
 
-
-/*********
-Cores
-
-Preto: 000000   #000000;
-
-
-*********/
-
-
-
-
 /******************************************************************
 /
 /               Basicos muito usados
@@ -123,6 +111,9 @@ Preto: 000000   #000000;
 .inline-block{
     display: inline-block;
 }
+.borda-arredondada{
+    border-radius: 8px;
+}
 /******************************************************************
 /
 /               END.Basicos muito usados
@@ -135,18 +126,30 @@ Preto: 000000   #000000;
 
 /******************************************************************
 /
-/               Cores de fonte
+/               Cores de fonte e fundo
 /
 /           Cores de fontes
 /
 /
 /******************************************************************/
+/*********
+Cores
+
+Preto: 000000   #000000;
+Amarelo: f8f5e6 #f8f5e6
+
+*********/
+
+.fundo-amarelo{
+    background-color: #f8f5e6!important;
+}
+
 .fonte-preto{
     color: #000000;
 }
 /******************************************************************
 /
-/               END.Cores de fonte
+/               END.Cores de fonte e fundo
 /
 /******************************************************************/
 
